# budgie-cpufreq-applet

./: README.md  meson.build
data/: budgie.cpufreq.policy.in  meson.build
src/: Utils.vala  meson.build
vapi/: config.vapi
